After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756171 - qtmux: fix date memory leak
qtmux: fix date memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.6.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-07 08:15 UTC by Vineeth
Modified: 2015-10-07 18:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix date memory leak (798 bytes, patch)
2015-10-07 08:17 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-10-07 08:15:54 UTC
When we get date using gst_tag_list_get_date, then the date needs to be freed.
Comment 1 Vineeth 2015-10-07 08:17:12 UTC
Created attachment 312798 [details] [review]
fix date memory leak
Comment 2 Sebastian Dröge (slomo) 2015-10-07 10:23:12 UTC
commit 44008938bb4b296f1d584d9450a338e63157b9f8
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Wed Oct 7 17:14:57 2015 +0900

    qtmux: Fix date memory leak
    
    When getting date from taglist, the memory should be freed after
    using it.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=756171